--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "webpack-dev-server": "3.11.0"
   },
   "engines": {
-    "node": "10"
+    "node": "12"
   },
   "dependencies": {
+    "chart.js": "^2.9.3",
     "he": "1.2.0",
     "moment": "^2.28.0"
   }
