--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "devDependencies": {
     "eslint": "6.1.0",
     "eslint-config-htmlacademy": "0.5.2",
-    "moment-locales-webpack-plugin": "^1.2.0",
+    "moment-locales-webpack-plugin": "1.2.0",
     "webpack": "4.44.1",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.11.0"
@@ -21,7 +21,7 @@
     "node": "12"
   },
   "dependencies": {
-    "chart.js": "^2.9.3",
+    "chart.js": "2.9.3",
     "he": "1.2.0",
     "moment": "^2.28.0"
   }
